kubernetes/security/kyverno/base/policies/prevent-privileged-containers.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prevent-privileged-containers
  annotations:
    policies.kyverno.io/title: Prevent Privileged Containers
    policies.kyverno.io/category: Security
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy prevents the creation of privileged containers which can pose significant security risks by having access to host resources. Note: Kured is exempted as it requires system access for node reboots.
spec:
  validationFailureAction: audit
  background: true
  rules:
  - name: check-privileged
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Privileged containers are not allowed. Note: Kured is exempted as it requires system access for node reboots."
      pattern:
        spec:
          containers:
          - securityContext:
              privileged: false
          =(ephemeralContainers):
          - securityContext:
              privileged: false
          =(initContainers):
          - securityContext:
              privileged: false
